@@ -1,4 +1,3 @@
-notes.py
 pescar.py
 popup.conf
 gatoscript-funciones.txt
